add author, update index and output

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,7 @@
 --- 
 title: "Data Analysis and Numerical Methods for Biological Systems Engineers"
 shorttitle: "Data Analysis and Numerical Methods"
+author: "Durelle Scott"
 author: "R. Clay Wright"
 correspondence: "Clay Wright (<wrightrc@vt.edu>)"
 date: "`r Sys.Date()`"
@@ -22,6 +23,28 @@ github-repo: VT-BSE3144/bookdown
 # About this book {-}
 
 This book was developed as a companion text for the Virginia Tech Biological Systems Engineering course BSE3144: Engineering Analysis for Biological Systems using Numerical Methods.
+
+This course focuses on the process of solving engineering problems related to biological systems using numerical analysis including root finding, numerical integration, differentiation, interpolation and numerical solution of ordinary differential equations, error analysis and programming with engineering software.
+
+The course will cover topics of numerical analysis including: root finding, numerical integration, differentiation, interpolation and numerical solution to ordinary differential equations to biological systems engineering related problems. 
+
+R is the programming language we will use in this course. We will spend the first portion of this course devoted to learning the basics of structured and modular programming. Although we focus on R, the described techniques are also applicable in any other computer languages. Furthermore, the techniques provide a logical approach to addressing complex problems, breaking them down into manageable (and solvable) pieces.
+
+The numerical computation techniques included in this course are utilized by many engineers. For biological systems engineers, the applications of the techniques include consideration of characteristics of biological systems, such as natural variability, growth/decay cycles, nonhomogeneity, anisotropy, and process uncertainty.
+
+**Learning Objectives:**
+
+Upon successful completion of this course, the student will be able to:
+
+- Apply the following numerical techniques to solve problems in biological systems engineering:
+  - regression analysis
+  - root finding
+  - solving systems of linear equations
+  - interpolation
+  - differentiation and integration
+  - solving ordinary differential equations
+- Define and quantify sources of error in numerical techniques
+- Write programs, using engineering software, that involve loops, logical block constructs, function, plotting, and input/output
 
 
 ```{r include=FALSE}
